--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,9 @@
     <title>RabbitMqTool</title>
   </head>
   <body>
+  <noscript>
+    <strong>We're sorry but iview-layoutui doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+  </noscript>
     <div id="app">
     </div>
   </body>
